...
                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="liS-rg-69e">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="202.33333333333334"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ReflectorRotorsPicker"/>
                                    </pickerView>
                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XQ-qL-89I">
...
                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UpO-RB-erj">
                                        <rect key="frame" x="0.0" y="405" width="343" height="202.33333333333337"/>
                                        <accessibility key="accessibilityConfiguration" identifier="InitialRotorOffsetPicker"/>
                                    </pickerView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="fm7-Cl-h3f" userLabel="Plugboard">
...
                                                                <rect key="frame" x="21.333333333333336" y="0.0" width="21.666666666666664" height="18.666666666666668"/>
                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="PlugboardA"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
...
                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="paI-a8-orG">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="224"/>
                                        <accessibility key="accessibilityConfiguration" identifier="RotorWindows"/>
                                    </pickerView>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yUp-6P-5Dk">
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="le0-26-wQv">
                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="343"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Message"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
...
                                                    <constraint firstAttribute="width" secondItem="0B5-5h-81B" secondAttribute="height" multiplier="1:1" id="Jev-qh-Jbe"/>
                                                </constraints>
                                                <state key="normal" title="Del"/>
                                                <connections>
                                                    <action selector="deleteLetter:" destination="g2z-oI-Nb2" eventType="touchUpInside" id="36c-NI-WHw"/>
...
                                                        <rect key="frame" x="181.66666666666666" y="0.0" width="36.333333333333343" height="21"/>
                                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                        <accessibility key="accessibilityConfiguration" label="lightB"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Code" id="2z1-by-nTY"/>
                    <connections>
                        <outlet property="deleteButton" destination="0B5-5h-81B" id="Vos-wT-NM2"/>
...
